[tool.poetry]
name = "radarplt"
version = "1.0.1"
description = ""
authors = ["jdkern11 <josephdanielkern@gmail.com>"]
readme = "README.md"
packages = [{include = "radarplt"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.4"
matplotlib = "^3.6.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
pytest = "^7.2.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
